--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,20 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.my-masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
+  display: flex;
+  margin-left: -30px; /* Adjust the gutter size */
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 30px; /* Gutter size */
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div { /* Add a bottom margin to each grid item */
+  margin-bottom: 30px;
+}
